1. all code add LICENSE header.